--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         updateBannerVisibility();
       }
 
-      var buildUrl = "Build";
+      var buildUrl = ".";
       var loaderUrl = buildUrl + "/ForWebGL.loader.js";
       var config = {
         dataUrl: buildUrl + "/ForWebGL.data",
