change Build Folder

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
         updateBannerVisibility();
       }
 
-      var buildUrl = ".";
-      var loaderUrl = buildUrl + "/ForWebGL.loader.js";
+      var buildUrl = "Build";
+      var loaderUrl = buildUrl + "/CardMatchGame.loader.js";
       var config = {
-        dataUrl: buildUrl + "/ForWebGL.data",
-        frameworkUrl: buildUrl + "/ForWebGL.framework.js",
-        codeUrl: buildUrl + "/ForWebGL.wasm",
+        dataUrl: buildUrl + "/CardMatchGame.data",
+        frameworkUrl: buildUrl + "/CardMatchGame.framework.js",
+        codeUrl: buildUrl + "/CardMatchGame.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "CardMatchGame",
