--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         updateBannerVisibility();
       }
 
-      var buildUrl = ".";
+      var buildUrl = "Build";
       var loaderUrl = buildUrl + "/CardMatchGame.loader.js";
       var config = {
         dataUrl: buildUrl + "/CardMatchGame.data",
