--- a/index.html
+++ b/index.html
@@ -1,63 +1,83 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | CardMatchGame</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
-  </head>
-  <body>
-    <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=800 height=600></canvas>
-      <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
-        <div id="unity-progress-bar-empty">
-          <div id="unity-progress-bar-full"></div>
-        </div>
-      </div>
-      <div id="unity-warning"> </div>
-      <div id="unity-footer">
-        <div id="unity-webgl-logo"></div>
-        <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">CardMatchGame</div>
-      </div>
-    </div>
-    <script>
-      var container = document.querySelector("#unity-container");
-      var canvas = document.querySelector("#unity-canvas");
-      var loadingBar = document.querySelector("#unity-loading-bar");
-      var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-      var warningBanner = document.querySelector("#unity-warning");
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>CardMatchGame</title>
 
-      // Shows a temporary message banner/ribbon for a few seconds, or
-      // a permanent error message on top of the canvas if type=='error'.
-      // If type=='warning', a yellow highlight color is used.
-      // Modify or remove this function to customize the visually presented
-      // way that non-critical warnings and error messages are presented to the
-      // user.
-      function unityShowBanner(msg, type) {
-        function updateBannerVisibility() {
-          warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
+    <!-- Firebase v8 CDN -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+
+    <!-- Firebase 초기화 및 Unity 호출 함수 정의 -->
+    <script>
+      var firebaseConfig = {
+        apiKey: "AIzaSyAMk7TPjeVCzpNpOwcAEOfaenIRvbwgaNg",
+        authDomain: "cardmatchgame-2a2af.firebaseapp.com",
+        databaseURL: "https://cardmatchgame-2a2af-default-rtdb.firebaseio.com",
+        projectId: "cardmatchgame-2a2af",
+        storageBucket: "cardmatchgame-2a2af.appspot.com",
+        messagingSenderId: "867887350190",
+        appId: "1:867887350190:web:e5500ca2209120826e083f",
+        measurementId: "G-KCK0QTF6BT"
+      };
+
+      // Firebase 초기화
+      firebase.initializeApp(firebaseConfig);
+
+      // Unity에서 호출할 전역 함수
+      window.UploadScoreToFirebase = function (playerId, stage, score) {
+        if (!firebase || !firebase.database) {
+          console.error("Firebase가 아직 초기화되지 않았습니다.");
+          return;
         }
-        var div = document.createElement('div');
-        div.innerHTML = msg;
-        warningBanner.appendChild(div);
-        if (type == 'error') div.style = 'background: red; padding: 10px;';
-        else {
-          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-          setTimeout(function() {
-            warningBanner.removeChild(div);
-            updateBannerVisibility();
-          }, 5000);
-        }
-        updateBannerVisibility();
+
+        firebase.database().ref("scores").push({
+          playerId: playerId,
+          stage: stage,
+          score: score,
+          timestamp: new Date().toISOString()
+        }).then(() => {
+          console.log(" Firebase 기록 성공");
+        }).catch((err) => {
+          console.error(" Firebase 기록 실패:", err);
+        });
+      };
+    </script>
+
+    <style>
+      html, body {
+        margin: 0;
+        height: 100%;
+        background: black;
+        overflow: hidden;
       }
 
-      var buildUrl = ".";
-      var loaderUrl = buildUrl + "/CardMatchGame.loader.js";
-      var config = {
+      #unity-container {
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      canvas {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
+  </head>
+
+  <body>
+    <div id="unity-container">
+      <canvas id="unity-canvas"></canvas>
+    </div>
+
+    <!-- Unity WebGL 로더 -->
+    <script>
+      const buildUrl = ".";
+      const loaderUrl = buildUrl + "/CardMatchGame.loader.js";
+      const config = {
         dataUrl: buildUrl + "/CardMatchGame.data",
         frameworkUrl: buildUrl + "/CardMatchGame.framework.js",
         codeUrl: buildUrl + "/CardMatchGame.wasm",
@@ -65,52 +85,17 @@
         companyName: "StudioBinguru",
         productName: "CardMatchGame",
         productVersion: "1.0",
-        showBanner: unityShowBanner,
       };
 
-      // By default Unity keeps WebGL canvas render target size matched with
-      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-      // Set this to false if you want to decouple this synchronization from
-      // happening inside the engine, and you would instead like to size up
-      // the canvas DOM size and WebGL render target sizes yourself.
-      // config.matchWebGLToCanvasSize = false;
-
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        // Mobile device style: fill the whole browser client area with the game canvas:
-
-        var meta = document.createElement('meta');
-        meta.name = 'viewport';
-        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-        document.getElementsByTagName('head')[0].appendChild(meta);
-        container.className = "unity-mobile";
-        canvas.className = "unity-mobile";
-
-        // To lower canvas resolution on mobile devices to gain some
-        // performance, uncomment the following line:
-        // config.devicePixelRatio = 1;
-
-        unityShowBanner('WebGL builds are not supported on mobile devices.');
-      } else {
-        // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-
-        canvas.style.width = "800px";
-        canvas.style.height = "600px";
-      }
-
-      loadingBar.style.display = "block";
-
-      var script = document.createElement("script");
+      const script = document.createElement("script");
       script.src = loaderUrl;
       script.onload = () => {
-        createUnityInstance(canvas, config, (progress) => {
-          progressBarFull.style.width = 100 * progress + "%";
+        createUnityInstance(document.querySelector("#unity-canvas"), config, (progress) => {
+          console.log(`로딩 중: ${Math.floor(progress * 100)}%`);
         }).then((unityInstance) => {
-          loadingBar.style.display = "none";
-          fullscreenButton.onclick = () => {
-            unityInstance.SetFullscreen(1);
-          };
-        }).catch((message) => {
-          alert(message);
+          console.log(" Unity WebGL 로드 완료");
+        }).catch((err) => {
+          alert(" Unity 로딩 실패: " + err);
         });
       };
       document.body.appendChild(script);
