--- a/Assets/WebGLTemplates/FirebaseTemplate/index.html
+++ b/Assets/WebGLTemplates/FirebaseTemplate/index.html
@@ -1,128 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>CardMatchGame</title>
+<head>
+  <meta charset="utf-8">
+  <title>CardMatchGame</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Firebase v8 CDN -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 
-    <!-- Firebase 초기화 및 Unity 호출 함수 정의 -->
-    <script>
-      var firebaseConfig = {
-        apiKey: "AIzaSyAMk7TPjeVCzpNpOwcAEOfaenIRvbwgaNg",
-        authDomain: "cardmatchgame-2a2af.firebaseapp.com",
-        databaseURL: "https://cardmatchgame-2a2af-default-rtdb.firebaseio.com",
-        projectId: "cardmatchgame-2a2af",
-        storageBucket: "cardmatchgame-2a2af.appspot.com",
-        messagingSenderId: "867887350190",
-        appId: "1:867887350190:web:e5500ca2209120826e083f",
-        measurementId: "G-KCK0QTF6BT"
-      };
+  <script>
+    var firebaseConfig = {
+      apiKey: "AIzaSyAMk7TPjeVCzpNpOwcAEOfaenIRvbwgaNg",
+      authDomain: "cardmatchgame-2a2af.firebaseapp.com",
+      databaseURL: "https://cardmatchgame-2a2af-default-rtdb.firebaseio.com",
+      projectId: "cardmatchgame-2a2af",
+      storageBucket: "cardmatchgame-2a2af.appspot.com",
+      messagingSenderId: "867887350190",
+      appId: "1:867887350190:web:e5500ca2209120826e083f",
+      measurementId: "G-KCK0QTF6BT"
+    };
+    firebase.initializeApp(firebaseConfig);
 
-      firebase.initializeApp(firebaseConfig);
-
-      // Unity -> JavaScript 함수 바인딩
-      window.UploadSessionToFirebase = function (jsonSession) {
-        try {
-          const session = JSON.parse(jsonSession);
-          firebase.database().ref("sessionLogs").push(session)
-            .then(() => console.log("GameSession 업로드 성공"))
-            .catch((err) => console.error("GameSession 업로드 실패:", err));
-        } catch (e) {
-          console.error("GameSession JSON 파싱 실패:", e);
-        }
-      };
-
-      window.UploadPlayLogToFirebase = function (jsonPlayLog) {
-        try {
-          const playLog = JSON.parse(jsonPlayLog);
-          firebase.database().ref("playLogs").push(playLog)
-            .then(() => console.log("PlaySession 업로드 성공"))
-            .catch((err) => console.error("PlaySession 업로드 실패:", err));
-        } catch (e) {
-          console.error("PlaySession JSON 파싱 실패:", e);
-        }
-      };
-
-      // Unity WebGL 앱 종료 시 GameSessionLogger 호출
-      window.onbeforeunload = function () {
-        if (typeof unityInstance !== "undefined") {
-          unityInstance.SendMessage("GameSessionLogger", "EndGameSessionFromWeb");
-        }
-      };
-    </script>
-
-    <style>
-      html, body {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        background: black;
-        overflow: hidden;
+    window.UploadSessionToFirebase = function (jsonSession) {
+      try {
+        const session = JSON.parse(jsonSession);
+        firebase.database().ref("sessionLogs").push(session)
+          .then(() => console.log("GameSession 업로드 성공"))
+          .catch((err) => console.error("GameSession 업로드 실패:", err));
+      } catch (e) {
+        console.error("GameSession JSON 파싱 실패:", e);
       }
+    };
 
-      #unity-container {
-        width: 100vw;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    window.UploadPlayLogToFirebase = function (jsonPlayLog) {
+      try {
+        const playLog = JSON.parse(jsonPlayLog);
+        firebase.database().ref("playLogs").push(playLog)
+          .then(() => console.log("PlaySession 업로드 성공"))
+          .catch((err) => console.error("PlaySession 업로드 실패:", err));
+      } catch (e) {
+        console.error("PlaySession JSON 파싱 실패:", e);
       }
+    };
 
-      canvas {
-        display: block;
-        background: #000;
+    window.onbeforeunload = function () {
+      if (typeof unityInstance !== "undefined") {
+        unityInstance.SendMessage("GameSessionLogger", "EndGameSessionFromWeb");
       }
-    </style>
-  </head>
+    };
+  </script>
 
-  <body>
-    <div id="unity-container">
-      <canvas id="unity-canvas"></canvas>
-    </div>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      background: #D6EBB5;
+      height: 100%;
+      overflow: hidden;
+    }
 
-    <!-- Unity WebGL 로더 및 화면 크기 자동 조정 -->
-    <script>
-      const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/CardMatchGame.loader.js";
+    #unity-container {
+      position: absolute;
+  	top: 50%;
+  	left: 50%;
+  	transform: translate(-50%, -50%);
+  	background: #D6EBB5;
+  	aspect-ratio: 4 / 3;
+  	width: min(100vw, calc(100vh * (4 / 3)));
+  	height: min(calc(100vw * (3 / 4)), 100vh);
+    }
 
-      const config = {
-        dataUrl: buildUrl + "/CardMatchGame.data",
-        frameworkUrl: buildUrl + "/CardMatchGame.framework.js",
-        codeUrl: buildUrl + "/CardMatchGame.wasm",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "StudioBinguru",
-        productName: "CardMatchGame",
-        productVersion: "1.0",
-      };
+    canvas {
+      width: 100%;
+      height: 100%;
+      display: block;
+    }
+  </style>
+</head>
 
-      // Unity 로더 실행
-      const script = document.createElement("script");
-      script.src = loaderUrl;
-      script.onload = () => {
-        createUnityInstance(document.querySelector("#unity-canvas"), config, (progress) => {
-          console.log(`로딩 중: ${Math.floor(progress * 100)}%`);
-        }).then((unityInstance) => {
-          window.unityInstance = unityInstance;
-          console.log("Unity WebGL 로드 완료");
-        }).catch((err) => {
-          alert("Unity 로딩 실패: " + err);
-        });
-      };
-      document.body.appendChild(script);
+<body>
+  <div id="unity-container">
+    <canvas id="unity-canvas"></canvas>
+  </div>
 
-      // 브라우저 창 크기에 맞춰 canvas 자동 조정
-      function resizeCanvas() {
-        const canvas = document.getElementById("unity-canvas");
-        canvas.style.width = window.innerWidth + "px";
-        canvas.style.height = window.innerHeight + "px";
-      }
+  <script>
+    const buildUrl = "Build";
+    const loaderUrl = buildUrl + "/CardMatchGame.loader.js";
 
-      window.addEventListener("resize", resizeCanvas);
-      window.addEventListener("load", resizeCanvas);
-    </script>
-  </body>
+    const config = {
+      dataUrl: buildUrl + "/CardMatchGame.data",
+      frameworkUrl: buildUrl + "/CardMatchGame.framework.js",
+      codeUrl: buildUrl + "/CardMatchGame.wasm",
+      streamingAssetsUrl: "StreamingAssets",
+      companyName: "StudioBinguru",
+      productName: "CardMatchGame",
+      productVersion: "1.0",
+    };
+
+    const script = document.createElement("script");
+    script.src = loaderUrl;
+    script.onload = () => {
+      createUnityInstance(document.querySelector("#unity-canvas"), config, (progress) => {
+        console.log(`로딩 중: ${Math.floor(progress * 100)}%`);
+      }).then((unityInstance) => {
+        window.unityInstance = unityInstance;
+        console.log("Unity WebGL 로드 완료");
+      }).catch((err) => {
+        alert("Unity 로딩 실패: " + err);
+      });
+    };
+    document.body.appendChild(script);
+  </script>
+</body>
 </html>
